--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Rajkumar Karnakar",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
+    "cors": "^2.8.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongodb": "^6.5.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
